--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     @keyframes flash-error{0%,100%{background:initial}50%{background:#fecaca}}
     .flash-error{animation:flash-error .7s}
 
+    /* Animação Suave para Diferença Grande */
+    @keyframes soft-pulse {
+        0%, 100% { opacity: 1; text-shadow: 0 0 1px currentColor; }
+        50% { opacity: 0.7; text-shadow: 0 0 5px currentColor; }
+    }
+    .animate-soft-pulse { animation: soft-pulse 1.5s infinite ease-in-out; }
+
     /* Tabela Compacta */
     #listaItensTable{width:100%;table-layout:auto;font-size:.85rem}
     #listaItensTable th,#listaItensTable td{padding:3px 2px; border:1px solid #e5e7eb; word-wrap: break-word; text-align: center;}
@@ -241,7 +248,8 @@
         </button>
     </div>
     
-    <div id="calculoPesoLiquidoDisplay" class="text-xs text-center text-gray-500 mb-2 h-4 font-mono"></div>
+    <!-- DISPLAY DO CÁLCULO E DIFERENÇA AQUI -->
+    <div id="calculoPesoLiquidoDisplay" class="text-xs text-center text-gray-500 mb-2 h-4 font-mono flex justify-center items-center gap-2"></div>
 
     <div id="statusEnvio" class="status-base">
         <span id="statusMensagem"></span>
